src/objects/Site__c.object
<CustomObject>
    <description>HFI or CPCS Site.  Site is synonymous with Agency, Region, Provider.   Note that External Referral Provider is using the Account Object.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_SiteAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Site/Agency</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Fax__c</fullName>
        <label>Primary Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_eMail__c</fullName>
        <label>Primary eMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Program_ExecutiveManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Executive/Manager</label>
        <referenceTo>User_Extension__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_ID__c</fullName>
        <description>Auto Number Site ID</description>
        <displayFormat>IN-{000}</displayFormat>
        <label>Site ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_3__c</fullName>
        <label>Street 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Site_ID__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Program__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Sites</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>All Sites</label>
    </listViews>
    <nameField>
        <label>Legal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>